// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package fleet;

// Required by protoc-gen-go
option go_package = ".;fleet";

message ChromePlatform {
    ChromePlatformID id = 1;
    int32 vm_slots = 2;
}

message ChromePlatformID {
    string value = 1;
}